--- a/package.json
+++ b/package.json
@@ -48,7 +48,14 @@
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^1.14.0"
+    "tailwind-merge": "^1.14.0",
+    "react-day-picker": "^8.9.1",
+    "embla-carousel-react": "^8.0.0",
+    "cmdk": "^1.1.1",
+    "vaul": "^1.1.2",
+    "react-hook-form": "^7.55.0",
+    "input-otp": "^1.2.4",
+    "react-resizable-panels": "^0.0.55"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
