--- a/package.json
+++ b/package.json
@@ -40,22 +40,22 @@
     "@supabase/supabase-js": "^2.75.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.263.1",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.65.0",
+    "react-resizable-panels": "^0.0.55",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^1.14.0",
-    "react-day-picker": "^8.9.1",
-    "embla-carousel-react": "^8.0.0",
-    "cmdk": "^1.1.1",
-    "vaul": "^1.1.2",
-    "react-hook-form": "^7.55.0",
-    "input-otp": "^1.2.4",
-    "react-resizable-panels": "^0.0.55"
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
